<resources>
    <string name="app_name">MyApplicationPortfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="movies_app">MOVIES APP</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="material_app">MAKE APP MATERIAL</string>
    <string name="go_ubiquitous">GO UBIQUITOUS</string>
    <string name="capstone_my_own_app">CAPSTONE:MY OWN APP</string>
</resources>
