
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/BarStyle"
        android:gravity="center"
        android:text="@string/my_nanodegree_apps" />

    <Button
        android:id="@+id/spotify_streamer"
        style="@style/BarStyle.Orange"
        android:onClick="moviesApp"
        android:text="@string/movies_app" />

    <Button
        android:id="@+id/scores_app"
        style="@style/BarStyle.Orange"
        android:onClick="scoresApp"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library_app"
        style="@style/BarStyle.Orange"
        android:onClick="libraryApp"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/BarStyle.Orange"
        android:onClick="buildItBigger"
        android:text="@string/build_it_bigger" />


    <Button
        android:id="@+id/make_material"
        style="@style/BarStyle.Orange"
        android:onClick="materialApp"
        android:text="@string/material_app" />

    <Button
        android:id="@+id/go_ubiquitous"
        style="@style/BarStyle.Orange"
        android:onClick="goUbiquitous"
        android:text="@string/go_ubiquitous" />

    <Button
        android:id="@+id/capstone_my_own_app"
        style="@style/BarStyle.Red"
        android:onClick="capstoneMyOwnApp"
        android:text="@string/capstone_my_own_app" />

</LinearLayout>
</ScrollView>